# sml_theory

./: --extra-index-url  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/smltheory/: __init__.py  bayes_decision.py  datasets.py  est_error.py  generate_data.py  gradient_descent.py  least_squares.py  opt_error.py  overfitting.py  trun_mvnt.py
src/smltheory/data/: data_best_in_class.csv  data_emp_loss.csv  data_est_error.csv  data_gen_error.csv  data_opt_error_fast.csv
tests/: test_smltheory.py
