[tool.poetry]
name = "smltheory"
version = "0.1.0"
description = "Demonstrates propositions of supervised machine learning theories"
authors = ["Sebastian Sciarra"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.25.2"
pandas = "^2.0.3"
scipy = "^1.11.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
myst-nb = {version = "^0.17.2", python = "^3.9"}
sphinx-autoapi = "^2.1.1"
sphinx-rtd-theme = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
